--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="rotator-slider">
+        <p>Test</p>
+    </div>
 <script src="scripts.js"></script>
 </body>
 </html>
